--- a/publications/index.html
+++ b/publications/index.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Publications - Data Intelligence Lab">
-    <link rel="icon" type="image/png" href="UI/farvicon_colored.png">
+    <link rel="icon" type="image/png" href="/UI/farvicon_colored.png">
     <title>Publications | DILAB</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="index.html" class="brand">
-                <img src="UI/logo13.PNG" alt="DILAB Logo" class="brand-logo">
+            <a href="/" class="brand">
+                <img src="/UI/logo13.PNG" alt="DILAB Logo" class="brand-logo">
             </a>
             <button class="menu-toggle">☰</button>
             <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="people.html">People</a>
-                <a href="publications.html" class="active">Publications</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="join.html">Join Us</a>
+                <a href="/">Home</a>
+                <a href="/people/">People</a>
+                <a href="/publications/" class="active">Publications</a>
+                <a href="/gallery/">Gallery</a>
+                <a href="/join/">Join Us</a>
             </div>
         </div>
     </nav>
@@ -323,7 +323,7 @@
     <footer>
         <div class="container">
             <div class="footer-content">
-                <img src="UI/hufs.gif" alt="HUFS Logo" class="footer-logo">
+                <img src="/UI/hufs.gif" alt="HUFS Logo" class="footer-logo">
                 <div class="footer-text">
                     <p>&copy; <span id="current-year">2026</span> Data Intelligence Lab (DILAB). Division of Language & AI, College of AI Convergence, Hankuk University of Foreign Studies</p>
                     <p>Suite 435, Faculty Office Building, 107, Imun-ro, Dongdaemun-gu, Seoul, 02450, Republic of Korea</p>
@@ -336,7 +336,9 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    </footer>
+
+    <script src="/script.js"></script>
 </body>
 
 </html>
