Change research interests

--- a/people/index.html
+++ b/people/index.html
@@ -46,9 +46,9 @@
                     <p style="color: var(--color-accent); font-weight: 600; margin-bottom: 1rem;">Assistant Professor</p>
                     <p style="margin-bottom: 1rem; color: var(--color-text-muted);">
                         <strong>Research Interests:</strong>
-                        <span class="interest-tag">Assessment framework and methodology</span>
+                        <span class="interest-tag">Assessment Frameworks</span>
                         <span class="interest-tag">Foundation Models</span>
-                        <span class="interest-tag">Multimodal Large Language Models</span>
+                        <span class="interest-tag">Multimodal LLMs</span>
                         <span class="interest-tag">Data-driven Understanding</span>
                     </p>
                     <p style="margin-bottom: 1rem; color: var(--color-text-muted);">
