Add Reserach Interest Jisoo

--- a/people/index.html
+++ b/people/index.html
@@ -71,6 +71,7 @@
                     <div class="person-desc">
                         <strong>Research Interest:</strong>
                         <span class="interest-tag">Emotional Intelligence</span>
+                        <span class="interest-tag">RLVR</span>
                     </div>
                     <p class="person-email"><strong>Email:</strong> jsjang0104@naver.com</p>
                 </div>
